--- a/styel.css
+++ b/styel.css
@@ -1,10 +1,119 @@
 
-.open-sans-normal {
+.open-sans-rel{
   font-family: "Open Sans", sans-serif;
   font-optical-sizing: auto;
-  font-weight: <weight>;
   font-style: normal;
   font-variation-settings:
     "wdth" 100;
 }
-.
+
+
+.open-sans-inter {
+  font-family: "Open Sans", sans-serif;
+  font-optical-sizing: auto;
+  font-style: normal;
+  font-variation-settings:
+    "wdth" 100;
+}
+body{
+    margin: 0 auto;
+    background-color: #F5F8FF;
+}
+nav{
+    display: flex;
+    justify-content: space-between;
+
+}
+.nav-title{
+    color: #4E47FF;
+    font-size: 34px;
+    margin-top: 50px;
+    margin-bottom: 50px;
+    margin-left: 150px ;
+    
+}
+.button-link{
+    text-decoration: none;
+    color: #ffffff;
+    font-size: 16px;
+    font-weight: bold;
+}
+nav button{
+    margin-right: 150px;
+    margin-top: 51.5px;
+    margin-bottom: 51.5px;
+}
+.btn-primary{
+    padding-top: 12px;
+    padding-left: 36px;
+    padding-bottom: 12px;
+    padding-right: 36px;
+    background-color: #4E47FF;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+.banner{
+    text-align: center;
+    margin-top: 158px;
+    margin-bottom: 152px;
+    margin-left: 267.5px;
+    margin-right: 267.5px;
+    height: 237px;
+    width: 905px;
+    margin: 0 auto;
+}
+.banner h1{
+    font-size: 65px;
+    font-weight: bold;
+    color: #252432;
+    margin-bottom: 37px;
+}
+.header{
+    background-image: url(./Assets/Hero-bg.png);
+    height: 698px;
+    
+    
+
+
+}
+main{
+    margin-left: 141px;
+    margin-right: 159px;
+}
+
+
+.action{
+    display: flex;
+    justify-content: space-between;
+    gap: 220px;
+
+    margin-top: 116px;
+    margin-bottom: 116px;
+    gap: 206px;
+    align-items: center;
+    
+    
+    
+}
+.action img{
+    height: 238px;
+    width: 403px;
+    border-radius: 48px;
+    
+}
+.section-title{
+    margin-top: 62.5px;
+    margin-bottom: 62.5px;
+    text-align: left;
+
+}
+.section-title h2{
+    font-size: 42px;
+    font-weight: bold;
+}
+.section-title p{
+    font-size: 24px;
+    color: rgba(37, 36, 50, 0.5);
+
+}
