--- a/styel.css
+++ b/styel.css
@@ -86,12 +86,11 @@ main{
 .action{
     display: flex;
     justify-content: space-between;
-    gap: 220px;
-
+    gap: 206px;
     margin-top: 116px;
     margin-bottom: 116px;
-    gap: 206px;
-    align-items: center;
+
+
     
     
     
@@ -100,6 +99,9 @@ main{
     height: 238px;
     width: 403px;
     border-radius: 48px;
+    align-items: center;
+    margin-top: 116px;
+    margin-bottom: 116px;
     
 }
 .section-title{
@@ -111,9 +113,47 @@ main{
 .section-title h2{
     font-size: 42px;
     font-weight: bold;
+    width: 517px;
 }
 .section-title p{
     font-size: 24px;
     color: rgba(37, 36, 50, 0.5);
+    margin-bottom: 23px;
+    width: 450px;
 
+}
+.follwer-s{
+    display: flex;
+    justify-content: space-around;
+    
+}
+.section-title-pro{
+    text-align: center;
+    background-color: rgba(78, 71, 255, 0.1);
+    padding-top: 50px;
+    padding-bottom: 50px;
+    padding-left: 142px;
+    padding-right: 142px;
+    border-radius: 24px;
+}
+
+.section-title-pro h1{
+    font-size: 45px;
+    font-weight: bold;
+    margin-bottom: 0;
+}
+.followers h1{
+    font-size: 80px;
+    font-weight: bold;
+    color: rgba(78, 71, 255, 1);
+    margin-bottom: 0;
+}
+.followers p{
+    font-size: 20px;
+    color: rgba(0, 0, 0, 0.5);
+}
+.follwer-s{
+    margin-bottom: 50px;
+    margin-left: 142px;
+    margin-top: 0;
 }
