--- a/styel.css
+++ b/styel.css
@@ -224,3 +224,29 @@ main{
 .card p{
     margin-top: 0;
 }
+.Focus{
+    text-align: center;
+    background-color: #FFFFFF;
+    padding-top: 71px;
+    padding-bottom: 71px;
+    margin-top: 137px;
+    margin-bottom: 93px;
+}
+.Focus h1{
+    font-size: 50px;
+    font-weight: bold;
+    margin-bottom: 20px;
+    
+}
+.Focus p{
+    color: rgba(0, 0, 0, 0.5);
+    font-size: 16px;
+    margin-bottom: 20px;
+}
+.Focus img{
+    border-radius: 48px;
+}
+.Focus button{
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
