complete footer section

--- a/styel.css
+++ b/styel.css
@@ -250,3 +250,101 @@ main{
     margin-top: 20px;
     margin-bottom: 20px;
 }
+.colom{
+    display: flex;
+    justify-content: space-between;
+    gap: 115px;
+}
+.feadback-titile{
+    width: 50%;
+
+    
+}
+.feadback-titile h1{
+    font-size: 97px;
+    font-weight: bold;
+}
+
+.feadbackinput{
+    width: 50%;
+    margin-top: 71px;
+    margin-bottom: 71px;
+    
+    
+}
+form label{
+    display: block;
+    font-size: 18px;
+    font-weight: 500;
+}
+form  input{
+    padding-top: 20px;
+    padding-bottom: 20px;
+    padding-left: 32px;
+    width: 100%;
+    border-radius: 10px;
+    background-color: white;
+    font-size: 20px;
+    color: rgba(0, 0, 0,0.5);
+    border: none;
+}
+form textarea{
+    padding-top: 20px;
+    padding-bottom: 20px;
+    padding-left: 32px;
+    width: 100%;
+    border-radius: 10px;
+    background-color: white;
+    font-size: 20px;
+    color: rgba(0, 0, 0,0.5);
+    border: none;
+
+}
+form button{
+    width: 100%;
+    margin-bottom: 71px;
+    margin-top: 20px;
+}
+.feadback{
+    margin-top: 92.23px;
+    margin-bottom: 14px;
+}
+.f{
+    text-align: center;
+    
+}
+.f h1{
+    font-size: 100px;
+    color: rgba(78, 71, 255, 1);
+    margin-bottom: 8px;
+    font-weight: bold;
+    
+}
+.f p{
+    color: #8987A1;
+    font-size: 20px;
+    margin-top: 8px;
+}
+.f ul li{
+    display: inline;
+    margin-right:  48px; ;
+}
+footer{
+    background-color: white;
+    padding-top: 104px;
+    padding-bottom: 104px;
+}
+footer a{
+    text-decoration: none;
+    color: #8987A1;
+    
+}
+button:hover{
+    background-color: yellow;
+}
+button a:hover{
+    color: black;
+}
+.extra{
+    width: 100%;
+}
