--- a/styel.css
+++ b/styel.css
@@ -24,14 +24,17 @@ body{
 nav{
     display: flex;
     justify-content: space-between;
+    padding: 0 150px;
 
 }
+/*  */
 .nav-title{
     color: #4E47FF;
     font-size: 34px;
     margin-top: 50px;
     margin-bottom: 50px;
-    margin-left: 150px ;
+    /* margin-left: 150px; */
+
     
 }
 .button-link{
@@ -41,9 +44,10 @@ nav{
     font-weight: bold;
 }
 nav button{
-    margin-right: 150px;
+    /* margin-right: 150px; */
     margin-top: 51.5px;
     margin-bottom: 51.5px;
+    
 }
 .btn-primary{
     padding-top: 12px;
@@ -178,6 +182,8 @@ width: 100%;
     text-align: center;
     margin-bottom: 50px;
 }
+
+
 .cards{
     display: flex;
     border-radius: 14px;
@@ -208,21 +214,23 @@ width: 100%;
 }
 
 .all{
-    display: flex;
+    text-align: center;
 }
 .all img{
     border-radius: 50%;
     height: 60px;
     width: 60px;
+    margin-bottom: none;
 }
-.all-p{
+.all p{
     margin-bottom: 0;
+    color: rgba(179, 179, 179, 1);
 }
-.all-p h6{
+.all h6{
     color: rgba(117, 117, 117, 1);
     font-size: 20px;
-
-
+    margin-top: 0;
+    margin-bottom: 0;
 }
 .card p{
     margin-top: 0;
@@ -290,6 +298,7 @@ form  input{
     font-size: 20px;
     color: rgba(0, 0, 0,0.5);
     border: none;
+    box-sizing: border-box;
 }
 form textarea{
     padding-top: 20px;
@@ -301,6 +310,7 @@ form textarea{
     font-size: 20px;
     color: rgba(0, 0, 0,0.5);
     border: none;
+    box-sizing: border-box;
 
 }
 form button{
